welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:15: error: type mismatch;
 found   : Unit
 required: Int
  else if(isBirthday==true){
       ^